css/style.css
/* Colours */
:root {
    --background: #fffafa;
    --text: #5e5e5e;
    --primary: #fc4700;
    --secondary: #fddc21;
    --accent: #e00000;
    --border: #ececec;
}

/* Core styles */
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: var(--background);
    color: var(--text);
}
.main-container {
    width: 60%;
    margin: auto;
}
.divider {
    display: block;
    width: 70px;
    height: 2px;
    background-image: linear-gradient(
        to left,
        var(--primary),
        var(--secondary)
    );
    margin: 40px auto 30px auto;
}
.back-button {
    height: auto;
    width: 40px;
    cursor: pointer;
}
.back-button:hover {
    transform: scale(1.2);
    transition: ease-in-out 0.3s;
}

/* Header styles */
.header-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--background);
    border-bottom: 2px solid var(--border);
    padding: 25px 0 20px 0;
}
.logo-container {
    cursor: pointer;
}
.header-logo {
    height: auto;
    width: 200px;
}
.nav-container {
    display: flex;
    gap: 20px;
}
.nav-seperator,
.nav-link {
    font-size: 1.6rem;
    color: var(--text);
}
.nav-link {
    text-decoration: none;
    cursor: pointer;
}
.nav-link:hover {
    transition: ease-in-out 0.2s;
    color: var(--primary);
}

/* Mobile header styles */
.mobile-header-container {
    display: none;
}
.mobile-header-logo {
    height: auto;
    width: 80px;
}
#burger-icon {
    display: none;
    height: auto;
    width: 70px;
    cursor: pointer;
}
.mobile-nav-container {
    display: none;
    flex-direction: column;
    justify-content: center;
    justify-items: center;
    align-items: center;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-color: var(--background);
    margin: auto;
}
.mobile-nav-link {
    font-size: 2rem;
    color: var(--text);
    text-decoration: none;
    margin: 30px 0;
    cursor: pointer;
}
.mobile-nav-link:hover {
    transition: ease-in-out 0.2s;
    color: var(--primary);
}
#close-icon {
    display: none;
    height: auto;
    width: 30px;
    font-size: 1.6rem;
    position: absolute;
    top: 40px;
    right: 35px;
    cursor: pointer;
    margin: 0;
}

/* Content TBA styles */
.content-tba {
    text-align: center;
    margin: 80px 0;
}
.content-tba-img {
    width: 120px;
    height: auto;
    margin-bottom: 20px;
}
.content-tba-msg {
    font-size: 1.2rem;
    color: var(--text);
    font-style: italic;
}

/* Content styles */
.content-container {
    width: 75%;
    margin: 50px auto;
}
.intro-container {
    text-align: center;
    border-bottom: 2px solid var(--border);
    margin: 50px auto 20px auto;
    padding-bottom: 50px;
}
.intro-text {
    width: 80%;
    font-size: 1.4rem;
    color: var(--text);
    line-height: 35px;
    letter-spacing: 1px;
    margin: auto;
}
.intro-name {
    color: var(--primary);
    font-style: italic;
}

/* Cards */
.cards-container {
    line-height: 25px;
    letter-spacing: 1px;
    margin: 80px 0;
}
.cards-header-container {
    text-align: center;
    margin: 80px 0 50px 0;
}
.card {
    border-width: 1px;
    border-style: solid;
    border-image: linear-gradient(
            to top right,
            var(--primary),
            var(--secondary),
            var(--background)
        )
        1;
    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1);
    margin: 40px 0;
    padding: 20px;
}
.card-summary {
    font-style: italic;
}
.card-tags,
.blog-tags-container {
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
    margin-bottom: 20px;
}
.card-tag,
.blog-tag {
    background-color: var(--secondary);
    color: var(--text);
    border-radius: 5px;
    padding: 3px 10px;
}
.card-link {
    text-decoration: none;
    color: var(--text);
}
.card-link:hover {
    color: var(--accent);
    transition: ease-in-out 0.2s;
}

/* Story styles */
.story-container {
    color: var(--text);
    text-align: center;
    margin: 50px 0;
}
.story-header {
    border-top: 1px solid var(--border);
    border-bottom: 1px solid var(--border);
    margin-bottom: 30px;
    padding: 50px 0;
}
.story-content {
    width: 75%;
    font-family: "Courier New", Courier, monospace;
    text-align: justify;
    font-size: 1.1rem;
    line-height: 35px;
    letter-spacing: 1px;
    margin: 50px auto;
}
.story-content p {
    text-indent: 40px;
}
.story-end {
    font-family: "Courier New", Courier, monospace;
    text-align: center;
    font-weight: bold;
    margin: 40px 0;
    font-size: 1.2rem;
    color: var(--text);
}

/* Blog post styles */
.blog-img-container {
    width: 100%;
    text-align: center;
    margin: 50px auto;
}
.blog-img {
    height: auto;
    max-width: 100%;
}
.blog-date {
    margin: 10px 0 25px 0;
}
.blog-tags-container {
    margin-bottom: 50px;
}
.blog-content {
    text-align: justify;
    letter-spacing: 1px;
    line-height: 35px;
    font-size: 1.1rem;
    margin: 50px auto;
}

/* Footer styles */
.footer-container {
    text-align: center;
    padding: 20px 0;
    border-top: 2px solid var(--border);
    margin-top: 20px;
}
.footer-text {
    color: var(--primary);
    font-size: 1rem;
}

/* Media styles */
@media (max-width: 950px) {
    .main-container,
    .content-container,
    .story-content,
    .blog-content {
        width: 90%;
    }
    .header-container {
        display: none;
    }
    .mobile-header-container {
        display: flex;
        justify-content: space-between;
        align-items: center;
        background-color: var(--background);
        border-bottom: 2px solid var(--border);
        padding: 20px 0 15px 0;
    }
    #burger-icon {
        display: block;
    }
    .story-content,
    .blog-content {
        line-height: 30px;
        letter-spacing: 0;
    }
}

